# raylib-box2d-starterproject

./: .envrc  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  flake.nix
assets/: CMakeLists.txt  CMakeRC.cmake
src/: allocator.cpp  allocator.h  arena.cpp  arena.h  assets.cpp  assets.h  box2d.h  bullet.cpp  bullet.h  convert.h  defer.h  dlload.h  entry.cpp  game_context.h  game_lib.h  input.h  logging.cpp  logging.h  macros.h  main.cpp  player.cpp  player.h  pool.h  pool_test.cpp  result.h
src/platform/web/: shell.html
